--- a/pages/1_pages/index.pug
+++ b/pages/1_pages/index.pug
@@ -5,13 +5,13 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/sass/1_pages/style.css")
         title Test  
-    body 
+    body.bady 
         div 
             nav.navbar
                 img(width="59px" height="29px")(src="/img/1/Group 4.png", alt="")
                 img(src="/img/1/Line 2.png", alt="")
                 p Something about <br> lemon
             div  
-                div(displey="") 
+                div.nav__right
                     img(src="/img/1/Group.png", alt="")
                     p how to eat
