--- a/sass/1_pages/style.scss
+++ b/sass/1_pages/style.scss
@@ -1,19 +1,35 @@
-body{
+body {
     padding: 0 130px;
     padding-top: 70px;
     font-family: Neue Haas Grotesk Display Pro, sans-serif;
 }
-.navbar{
+
+.navbar {
     display: inline-block;
     background-color: aquamarine;
     display: grid;
     grid-template-columns: auto auto auto;
     width: max-content;
     gap: 40px;
-    img:nth-child(2){
+
+    img:nth-child(2) {
         height: 30px;
     }
-    p{
+
+    p {
         transform: translateY(-17px);
+    }
+
+
+}
+
+.nav__right {
+    display: grid;
+    grid-template-columns: auto auto;
+    width: max-content;
+
+    p {
+        margin-top: 6px;
+        margin-left: 10px;
     }
 }
