--- a/pages/1_pages/index.pug
+++ b/pages/1_pages/index.pug
@@ -6,8 +6,8 @@ html(lang="en")
         link(rel="stylesheet", href="/sass/1_pages/style.css")
         title Test  
     body.bady 
-        div 
-            nav.navbar
+        div.navbar
+            nav.navbar__left
                 img(width="59px" height="29px")(src="/img/1/Group 4.png", alt="")
                 img(src="/img/1/Line 2.png", alt="")
                 p Something about <br> lemon
