--- a/pages/1_pages/index.pug
+++ b/pages/1_pages/index.pug
@@ -6,7 +6,7 @@ html(lang="en")
         link(rel="stylesheet", href="/sass/1_pages/style.css")
         title Test  
     body.bady 
-        div.navbar
+        navbar.navbar
             nav.navbar__left
                 img(width="59px" height="29px")(src="/img/1/Group 4.png", alt="")
                 img(src="/img/1/Line 2.png", alt="")
@@ -15,3 +15,13 @@ html(lang="en")
                 div.nav__right
                     img(src="/img/1/Group.png", alt="")
                     p how to eat
+        main
+            h3 1/12
+            img.lemon(src="/img/1/LEMON.png", alt="")
+            div.hero
+                img(src="/img/1/hero.png", alt="")
+                img(src="/img/1/hero2.png", alt="")
+            div.her02
+                img(src="/img/1/Group 7.png", alt="")
+                img(src="/img/1/searchicon.png", alt="")
+            img.leftbottom(src="/img/1/Screenshot_1.png", alt="")
