--- a/pages/2_pages/index.pug
+++ b/pages/2_pages/index.pug
@@ -3,5 +3,27 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href="/sass/2_pages/style.css")
         title Document
-    body 
+    body
+        nav 
+            div 
+                img(src="/img/2/Group 3.png", alt="")
+            div.navright
+                h3 Menu
+                img(src="/img/2/jam_menu.png", alt="")
+        main 
+            div.maindev
+                img.maindevimg(src="/img/2/text.png", alt="")
+                div.needback
+                    img(src="/img/2/text2.png", alt="")
+                    img(src="/img/2/images.png", alt="")
+            div.settingbtn
+                h4 Tech Support
+                img(src="/img/2/settings.png", alt="")
+            center
+                div 
+                    select  
+                        option Scrool Down
+                        option Scrool Down  
+                        option Scrool Down  
