--- a/pages/3_pages/index.pug
+++ b/pages/3_pages/index.pug
@@ -3,5 +3,13 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-    body 
+        link(rel="stylesheet", href="/sass/2_pages/style.css")
+        title Pages_3
+    body    
+        nav 
+            div 
+                img(src="/img/3/left.png", alt="")        
+            div         
+                h3 CN
+                h3 EN
+                img(src="/img/3/right.png", alt="")
