--- a/sass/3_pages/style.css
+++ b/sass/3_pages/style.css
@@ -1,1 +1,18 @@
-/*# sourceMappingURL=style.css.map */
+body {
+  padding: 0 100px;
+  font-family: Neue Haas Grotesk Display Pro, sans-serif;
+  padding-top: 50px;
+  background-color: black;
+}
+
+nav {
+  width: 100%;
+}
+
+div {
+  background-color: red;
+}
+
+img {
+  width: 20000px;
+}/*# sourceMappingURL=style.css.map */
