--- a/pages/3_pages/index.pug
+++ b/pages/3_pages/index.pug
@@ -2,7 +2,25 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet" href="/sass/3_pages/style.css")
         title Document
     body 
+        nav 
+            div.navleft
+                img(src="/img/3/left.png" alt="")
+            div.navright
+                img(src="/img/3/CN.png" alt="")
+                img(src="/img/3/EN.png" alt="")
+                img(src="/img/3/right.png" alt="")    
+        main 
+            div.meincha
+                h1.ondenight One nightowl is coding really hard
+                div.cominson(style="display: grid;") 
+                    img(src="/img/3/COMING SOON.png", alt="")    
+                img.bigpicture(src="/img/3/Group 2.png" alt="")
+                div.btn
+                    h3 Get Notifed
+                    button Send
+            div     
+                img(src="" alt="")
