--- a/sass/3_pages/style.css
+++ b/sass/3_pages/style.css
@@ -1,1 +1,83 @@
-/*# sourceMappingURL=style.css.map */
+body {
+  font-family: Neue Haas Grotesk Display Pro, sans-serif;
+  padding: 0 100px;
+  padding-top: 50px;
+  background-color: #f9f9f9;
+  overflow: hidden;
+}
+
+nav {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1000px;
+  width: 100%;
+}
+nav .navright {
+  display: grid;
+  gap: 50px;
+  grid-template-columns: auto auto auto;
+  width: -moz-max-content;
+  width: max-content;
+}
+nav .navright img:nth-child(2) {
+  border-bottom: 2px solid;
+  padding-bottom: 5px;
+  position: relative;
+}
+nav .navright img:nth-child(3) {
+  position: relative;
+  top: -10px;
+  left: 20px;
+}
+
+.meincha {
+  margin-top: 170px;
+  margin-left: 100px;
+}
+.meincha .bigpicture {
+  position: relative;
+  top: -370px;
+  left: 704px;
+  width: 420px;
+  height: 631px;
+  z-index: -9;
+}
+.meincha .btn {
+  margin-top: -500px;
+  display: grid;
+  grid-template-columns: auto auto;
+  width: -moz-max-content;
+  width: max-content;
+  gap: 50px;
+}
+.meincha .btn h3 {
+  border-bottom: 2px solid rgb(215, 116, 29);
+  width: 275px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.5019607843);
+  padding-bottom: 10px;
+}
+.meincha .btn button {
+  border-radius: 4px;
+  width: 102px;
+  height: 59px;
+  background-color: #FF7064;
+  border: none;
+  font-size: 20px;
+  font-weight: 100;
+  font-family: "Neue Haas Grotesk Display Pro";
+  color: white;
+}
+.meincha h1:nth-child(2) {
+  font-size: 100px;
+  font-weight: 50 !important;
+  font-family: "Neue Haas Grotesk Display Pro 25 XThin";
+  text-shadow: 0px 6px 0px black, 0px 12px 0px black, 0px 18px 0px black;
+}
+.meincha .cominson img {
+  width: 632px;
+}
+.meincha .ondenight {
+  font-size: 50px;
+  font-weight: 600;
+}/*# sourceMappingURL=style.css.map */
