--- a/pages/4_pages/index.pug
+++ b/pages/4_pages/index.pug
@@ -3,5 +3,13 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href="/sass/4_pages/style.css")
         title Document
     body 
+        main
+            img(src="/img/4/Vector.png", alt="")
+            div.rightcontent
+                h3 Don't miss it 
+                p We will email you one delicious recipe everyday for you to try at home. They are simple and delicious: we encourage you to try! 
+                input(type="text" placeholder="Your Email here") 
+                button Subscribe
