--- a/sass/4_pages/style.css
+++ b/sass/4_pages/style.css
@@ -1,1 +1,50 @@
-/*# sourceMappingURL=style.css.map */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Source Sans Pro, sans-serif;
+  overflow: hidden;
+}
+
+main {
+  display: flex;
+}
+main img {
+  width: 901px;
+  height: 870px;
+}
+main .rightcontent {
+  position: relative;
+  margin-top: 200px;
+}
+main .rightcontent h3 {
+  font-size: 64px;
+  transform: translateY(60px);
+}
+main .rightcontent p {
+  text-align: center;
+  max-width: 370px;
+  font-size: 24px;
+  font-weight: 400;
+  height: 120px;
+  line-height: 30.17px;
+}
+main .rightcontent input {
+  border: 1.5 solid;
+  width: 384px;
+  height: 50px;
+  border-radius: 4px;
+  padding-left: 20px;
+  font-size: 16px;
+}
+main .rightcontent button {
+  width: 143px;
+  height: 50px;
+  border-radius: 8px;
+  padding: 10px, 20px, 10px, 20px;
+  background-color: black;
+  color: white;
+  display: block;
+  font-size: 22px;
+  transform: translateX(125px);
+  margin-top: 20px;
+}/*# sourceMappingURL=style.css.map */
