--- a/pages/5_pages/index.pug
+++ b/pages/5_pages/index.pug
@@ -3,5 +3,22 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href="/sass/5_pages/style.css")
         title Document
     body 
+        main 
+            img(src="/img/5/Rectangle 1.png", alt="")
+            div.content
+                h2 Trinity 43rd Avenue LLC
+
+                div 
+                    div 
+                        img.thanks(src="/img/5/Thanks, John!.png", alt="")
+                        p.tp Here is your receipt for your rent payment for the month of July. Below are the details. 
+                    div.needgrid
+                        img(src="/img/5/Date.png", alt="")
+                        img(src="/img/5/огту.png", alt="")
+                        img(src="/img/5/total.png", alt="")
+                        img(src="/img/5/1200.png", alt="")
+
+                p Questions? Contact us at (206) 121-456 or email us at trinityapartment@43st.com 
